--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -1,4 +1,12 @@
 version: v2
+managed:
+  enabled: true
+  override:
+    - file_option: go_package_prefix
+      value: ycrpc/proto/gen
+  disable:
+    - file_option: go_package
+      module: buf.build/bufbuild/protovalidate
 plugins:
   - local: protoc-gen-go
     out: gen
