--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -13,6 +13,9 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
+# Install sqlc
+RUN go install github.com/sqlc-dev/sqlc/cmd/sqlc@latest
+
 # Install buf and required protoc plugins
 RUN go install github.com/bufbuild/buf/cmd/buf@latest && \
   go install google.golang.org/protobuf/cmd/protoc-gen-go@latest && \
